hive-macro/tests/macro/hive_test/should_fail/function_privacy.rs
#[hive_macro::hive_test]
pub fn test_function() {}

fn main() {}
